# crypto-tontine

./: .gitignore  Dockerfile  README.md  setup.cfg  setup.py
scripts/: bootstrap-doge  get-docker-dependencies
src/: keys.py  wallet_generation.py
src/tontine/: keys.py  tontine.py  wallet_generation.py
src/tontine/wallet/: base.py  doge.py  electrum.py
test/tontine_test/: test_doge.py  test_keys.py
test/tontine_test/data/: alice  alice.pub  bob  bob.pub
