[metadata]
name = tontine
description = Encrypt cryptocurrency wallets such that all investors are required for decryption
long_description = file: README.md
author = Stefans Mezulis
author_email = stefans.mezulis@gmail.com
url = https://github.com/stefansm/crypto-tontine

[options]
include_package_data = True
package_dir=
    = src
packages = find:
python_requires = >=3.8
install_requires =
    click

[options.packages.find]
where=src

[options.extras_require]
test = pytest

[options.entry_points]
console_scripts =
    tontine = tontine.tontine:main
